Perkin-UAT/force-app/main/default/objects/SMAX_PS_Drop_Ship_Locations__c/SMAX_PS_Drop_Ship_Locations__c.object-meta.xml
<CustomObject>
    <description>Denotes addresses for drop ship locations.</description>
    <label>Drop Ship Location</label>
    <nameField>
        <displayFormat>DSL-{000000}</displayFormat>
        <label>Drop Ship Locations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drop Ship Locations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>