Perkin-UAT/force-app/main/default/objects/SMAX_PS_Drop_Ship_Locations__c/fields/SMAX_PS_Destination_City__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Destination_City__c</fullName>
    <description>“City” part of the destination address</description>
    <inlineHelpText>“City” part of the destination address</inlineHelpText>
    <label>To City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>