Perkin-UAT/force-app/main/default/objects/SMAX_PS_Drop_Ship_Locations__c/fields/SMAX_PS_Destination_Street__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Destination_Street__c</fullName>
    <description>“Street” part of the destination address</description>
    <inlineHelpText>“Street” part of the destination address</inlineHelpText>
    <label>To Street</label>
    <type>TextArea</type>
</CustomField>