Perkin-UAT/force-app/main/default/objects/SMAX_PS_Drop_Ship_Locations__c/fields/SMAX_PS_Destination_Zip__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Destination_Zip__c</fullName>
    <description>“Zip/Postal Code” part of the destination address</description>
    <inlineHelpText>“Zip/Postal Code” part of the destination address</inlineHelpText>
    <label>To Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>