Perkin-UAT/force-app/main/default/objects/SMAX_PS_Drop_Ship_Locations__c/fields/SMAX_PS_DestinationName1__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_DestinationName1__c</fullName>
    <description>Destination Name1</description>
    <inlineHelpText>Destination Name1</inlineHelpText>
    <label>Company</label>
    <length>35</length>
    <type>Text</type>
</CustomField>