Perkin-UAT/force-app/main/default/objects/SMAX_PS_Drop_Ship_Locations__c/fields/SMAX_PS_DestinationName4__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_DestinationName4__c</fullName>
    <description>Destination Name4</description>
    <inlineHelpText>Destination Name4</inlineHelpText>
    <label>To Name4</label>
    <length>35</length>
    <type>Text</type>
</CustomField>