Perkin-UAT/force-app/main/default/objects/SMAX_PS_Drop_Ship_Locations__c/fields/SMAX_PS_Global_To_Country__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Global_To_Country__c</fullName>
    <inlineHelpText>List of SAP Country values.</inlineHelpText>
    <label>To Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SAP_Countries</valueSetName>
    </valueSet>
</CustomField>