Perkin-UAT/force-app/main/default/objects/SMAX_PS_Drop_Ship_Locations__c/fields/SMAX_PS_Owned_By_Company__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Owned_By_Company__c</fullName>
    <description>The Company/ Business Entity that owns the record</description>
    <label>Owned By Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_050_Owned_by_Company</valueSetName>
    </valueSet>
</CustomField>