Perkin-UAT/force-app/main/default/objects/SMAX_PS_Drop_Ship_Locations__c/fields/SMAX_PS_Technician_Equipment__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Technician_Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the technician that is related to the drop ship location</description>
    <inlineHelpText>Denotes the technician that is related to the drop ship location</inlineHelpText>
    <label>Technician/Equipment</label>
    <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
    <relationshipLabel>Drop Ship Locations</relationshipLabel>
    <relationshipName>Drop_Ship_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>