Perkin-UAT/force-app/main/default/objects/SMAX_PS_Drop_Ship_Locations__c/fields/SMAX_PS_ToStreet4__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ToStreet4__c</fullName>
    <label>To Street 4</label>
    <length>40</length>
    <type>Text</type>
</CustomField>